# AI-OPD-Prescreening-Triage-System

./: .gitignore  .gitmodules  CLAUDE.md  README.md  Software-Requirements-Specification-for-hotline-staff.md  docker-compose.yml
hospital-his-mock/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample_patients.csv  sample_visits.csv
hospital-his-mock/his_mock/: __init__.py  database.py  main.py
hospital-his-mock/scripts/: seed_db.py
hospital-his-mock/tests/: test_his_api.py
hospital-hotline-assistant-api/: .env.example  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.txt
hospital-hotline-assistant-api/app/: config.py  database.py  main.py  schemas.py
hospital-hotline-assistant-api/app/data/: departments.json  er_triage_five_level_system.json  screening_criteria_v1.json
hospital-hotline-assistant-api/app/services/: __init__.py  adk_agent.py  admin_auth.py  blood_pressure.py  bp_rest.py  env_persist.py  google_ai.py  google_stt.py  google_tts.py  live_voice_service.py  notification_service.py  (+9 more)
hospital-hotline-assistant-api/migrations/: 001_hospital_hotline_schema.sql  002_opd_review_feedback.sql  003_seed_ops_admin.sql  004_symptom_scale_fields.sql  005_contact_preference_and_ai_score.sql  006_doctor_schedules.sql  007_schedule_date_based.sql  008_disease_surveillance.sql  009_surveillance_session_unique.sql  011_triage_manual_uploads.sql  012_bp_readings.sql  013_screening_criteria.sql  014_ai_inference_audit.sql  015_departments_his_alignment.sql  016_nurse_review_narrative.sql  017_prune_interview_reviews.sql  018_fix_audit_double_encoded_jsonb.sql  019_input_mode_button.sql  020_sessions_visit_id_index.sql  021_bp_rest_windows.sql  022_department_nav_fields.sql
hospital-hotline-assistant-api/scripts/: check_db.py  check_speech_roundtrip.py  check_surveillance.py  check_vertex.py  init_db.py  reset_demo.py  reset_his.py  seed_screening_criteria.py
hospital-hotline-assistant-api/tests/: test_agent_factory_tools.py  test_bp_rest_and_weight.py  test_confirm_visit_name.py  test_contact_preference_tool.py  test_live_service.py  test_nlu_yesno.py  test_rag_ingest.py  test_rag_query.py  test_reference_data.py  test_scale_override.py  test_session_resume.py  test_surveillance_extractor.py  test_surveillance_integration.py  test_triage_rag_agent.py
(+174 files in other folders)
