[project]
name = "hospital-hotline-assistant-api"
version = "0.1.0"
description = "AI-assisted hospital hotline triage API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "google-genai>=1.0.0",
    "google-cloud-texttospeech>=2.16.0",
    "google-cloud-speech>=2.27.0",
    "websockets>=15.0",
    "llama-index>=0.14.23",
    "llama-index-vector-stores-postgres>=0.8.1",
    "llama-index-embeddings-huggingface>=0.7.0",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.6.0",
    "langgraph>=1.2.7",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "bleak>=3.0.2",
    "terminaltables>=3.1.10",
    "langchain-google-genai>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Tell Pyright / basedpyright where the uv-managed virtual environment
# lives so it can resolve imports like fastapi / asyncpg / pydantic-settings
# without needing the editor to be launched with the venv activated.
# pythonVersion stays aligned with `requires-python` above.
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires a running backend + live DB (deselect with -m 'not integration')",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
include = ["app", "scripts"]
exclude = ["**/__pycache__", ".venv"]
